--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
     "vue-loader": "^12.1.0",
     "vue-resource": "^1.3.4",
     "vue-resource-2": "^0.8.0",
     "vue-router": "^2.7.0",
     "vue-template-compiler": "^2.3.3",
-    "webpack": "^2.6.1",
+    "webpack": "^2.7.0",
     "webpack-dev-server": "^2.4.5"
   }
 }
